CRUD operations working for API, connected to mysql database (currently local) Added requirements file for pip
